# platformer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake_vs2015_x64.bat  cmake_vs2015_x86.bat  cmake_vs2017_x64.bat  cmake_vs2017_x86.bat  cmake_xcode.sh  default.config  game.config  user.config
android/: AndroidManifest.xml  build.xml  project.properties
android/jni/: Android.mk  Application.mk
android/res/values/: strings.xml
raw/automation/: Android.mk  CMakeLists.txt  mklink.bat  mklink.sh
raw/levels/: 0.json  0.tmx  rules.json  test.json  test.tmx
raw/spritesheets/: bg.json  bg.pdn  bg.tps  collectables.json  collectables.tps  enemy.json  enemy.tps  gamepad.pdn  interactables.json  interactables.tps  player.json  player.tps  rules.json  screen.json  screen.tps  tiles.tps
raw/svgs/: texture.export
raw/textures/: water_tiled.pdn
res/audio/: player.audio
res/fonts/: debug.gpb
res/gameobjects/: enemy_fish.go  enemy_slime.go  enemy_snail.go  enemy_spider.go  level.go  player.go  root.go
res/levels/: 0.level  test.level
res/lua/: run_tools.lua
res/lua/tools/: build_android.lua  clean_android.lua  convert_json.lua  deploy_android.lua  export_textures.lua  generate_android.lua
res/parallax/: countryside.parallax
res/physics/: characters.physics  level.physics
res/shaders/: sepia.frag  water.frag
res/spritesheets/: bg.ss  collectables.ss  enemy.ss  interactables.ss  player.ss  screen.ss
res/ui/: gamepad.form  gamepad.theme  options.form  options.theme
src/: AudioComponent.cpp  AudioComponent.h  CameraComponent.cpp  CameraComponent.h  CharacterRenderer.cpp  CharacterRenderer.h  Common.cpp  Common.h  Debug.cpp  Debug.h  EnemyComponent.cpp  EnemyComponent.h  LevelCollision.cpp  LevelCollision.h  LevelCollisionComponent.cpp  LevelCollisionComponent.h  LevelLoaderComponent.cpp  LevelLoaderComponent.h  LevelPlatformsComponent.cpp  LevelPlatformsComponent.h  LevelRendererComponent.cpp  LevelRendererComponent.h  Messages.h  PhysicsLoaderComponent.cpp  PhysicsLoaderComponent.h  Platformer.cpp  Platformer.h  PlayerComponent.cpp  PlayerComponent.h  PlayerInputComponent.cpp  PlayerInputComponent.h  PlayerResetComponent.cpp  PlayerResetComponent.h  ResourceManager.cpp  ResourceManager.h  ScreenOverlay.cpp  ScreenOverlay.h  Sprite.h  SpriteAnimationComponent.cpp  SpriteAnimationComponent.h  (+4 more)
