cmake_minimum_required(VERSION 2.8)
project(deps)
include("../../external/GamePlay-deps/cmake/TargetArch.cmake")
set(ARCH "unknown")
target_architecture(ARCH)
string(TOLOWER ${CMAKE_SYSTEM_NAME} LOWER_SYSTEM_NAME)
set(LIBRARY_OUTPUT_PATH "../../../external/GamePlay-deps/out/external-deps/lib/${LOWER_SYSTEM_NAME}/${ARCH}")
add_library(deps dummy.cpp)
set_target_properties(deps PROPERTIES OUTPUT_NAME "gameplay-deps")
